[gd_scene load_steps=5 format=3 uid="uid://c5mnfussuwtot"]

[ext_resource type="Script" path="res://entities/projectiles/projectile_arrow.gd" id="1_bk0qx"]
[ext_resource type="Texture2D" uid="uid://lqe2ufitxomu" path="res://assets_sprites/Ballpen_Projectile/Ballpen.png" id="2_d42l7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqfqn"]
size = Vector2(6.25, 3.75)

[sub_resource type="CircleShape2D" id="CircleShape2D_nb8at"]
radius = 5.0

[node name="projectile_arrow" type="CharacterBody2D"]
scale = Vector2(0.8, 0.8)
collision_layer = 8
script = ExtResource("1_bk0qx")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_d42l7")
region_rect = Rect2(4, 13, 24, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(10.625, 0.625)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_hqfqn")

[node name="Timer_Range_Lifespan" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(11.25, 1.25)
scale = Vector2(0.75, 0.75)
shape = SubResource("CircleShape2D_nb8at")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-2.38419e-07, 0)
scale = Vector2(1.5, 0.5)

[connection signal="timeout" from="Timer_Range_Lifespan" to="." method="_on_timer_lifespan_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
